-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
-
4baa3b7c5 (dev), b14891e3d (dev)
The QML language server causes compiler warnings due to multiple comparisons of signed and unsigned integer variables.
One example in qqmllsutils.cpp:294
const auto smallestColon = smallest->fileLocation->info().regions[ColonTokenRegion]; // sanity check: is it the definition of the current binding? check if they both have their // ':' at the same location if (propertyDefinitionColon.isValid() && propertyDefinitionColon == smallestColon && offsetInFile < smallestColon.offset) { return smallestPropertyDefinition; }
offsetInFile is a qsizetype, while smallesColon.offset is a qint32.
Side note: The definition of smallestColon using auto is inappropriate, because the type is not obvious at this point.
| For Gerrit Dashboard: QTBUG-127833 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 590778,6 | SourceLocation: make begin() and end() qsizetype | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 591227,10 | qml: limit qml file size to 2GB or 4GB in parser | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 591228,6 | RFC: SourceLocation: make begin() and end() qsizetype | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |