src/qml/common/qqmljssourcelocation_p.h
@@ -66,8 +66,8 @@ public:
 
     bool isValid() const { return *this != SourceLocation(); }
 
-    quint32 begin() const { return offset; }
-    quint32 end() const { return offset + length; }
+    qsizetype begin() const { return qsizetype(offset); }
+    qsizetype end() const { return qsizetype(offset) + length; }
 
     // Returns a zero length location at the start of the current one.
     SourceLocation startZeroLengthLocation() const
@@ -80,11 +80,12 @@ public:
         quint32 i = offset;
         quint32 endLine = startLine;
         quint32 endColumn = startColumn;
-        while (i < end()) {
+        const quint32 end = offset + length;
+        while (i < end) {
             QChar c = text.at(i);
             switch (c.unicode()) {
             case '\n':
-                if (i + 1 < end() && text.at(i + 1) == QLatin1Char('\r'))
+                if (i + 1 < end && text.at(i + 1) == QLatin1Char('\r'))
                     ++i;
                 Q_FALLTHROUGH();
             case '\r':
@@ -96,7 +97,7 @@ public:
             }
             ++i;
         }
-        return SourceLocation(offset + length, 0, endLine, endColumn);
+        return SourceLocation(end, 0, endLine, endColumn);
     }
 
 // attributes
