src/qmlcompiler/qqmlsasourcelocation.cpp
@@ -38,7 +38,7 @@ bool QQmlSA::SourceLocation::isValid() const
  */
 quint32 QQmlSA::SourceLocation::begin() const
 {
-    return QQmlSA::SourceLocationPrivate::sourceLocation(*this).begin();
+    return offset();
 }
 
 /*!
@@ -46,7 +46,7 @@ quint32 QQmlSA::SourceLocation::begin() const
  */
 quint32 QQmlSA::SourceLocation::end() const
 {
-    return QQmlSA::SourceLocationPrivate::sourceLocation(*this).end();
+    return offset() + length();
 }
 
 /*!
